--- a/css/style.css
+++ b/css/style.css
@@ -350,7 +350,7 @@ header .light-logo {
     margin: 20px 0px;
     margin-top: 30px;
     text-transform: uppercase;
-    border-radius: 25px;
+    border-radius: 5px;
     margin-left: 10px;
     
 }
@@ -359,7 +359,7 @@ header .light-logo {
     background-color: #32c4e9;
     color: #fff;
     padding:12px 15px;
-    
+    text-align: center;
     cursor: pointer;
     box-shadow: inset 0 0 0 0 #000;
     -webkit-transition: all ease 0.8s;
@@ -385,11 +385,13 @@ header .light-logo {
     -webkit-transition: all ease 0.5s;
     -moz-transition: all ease 0.5s;
     transition: all ease 0.5s;
+
 }
 
 #jumbo_btn2:hover {
-    box-shadow: inset 0 200px 0  0 #fff;
+    box-shadow: inset 0 100px 0  0 #fff;
     color: #32c4e9;
+    
     
 }
 
@@ -578,16 +580,12 @@ header .light-logo {
     color: #3d3d3d;
 }
 
-.why-choose.why-choose-right .simple-icon i {
-    border: 1px solid #232929;
-    color: #232929;
-    border-radius: 50%;
-    padding: 15px;
-    font-size: 22px
+#check1{
+    color:#000;
 }
 
-.why-choose.why-choose-left .simple-icon i {
-    border: 1px solid #232929;
+.why-choose .simple-icon i {
+    border: 2px solid #000;
     color: #232929;
     border-radius: 50%;
     padding: 15px;
@@ -655,12 +653,13 @@ header .light-logo {
 
 .btn_large.quote_btn {
     color: #fff;
-    border: 2px solid #fff;
+    border: 2px solid #32c4e9;
     padding: 10px 25px;
     text-transform: uppercase;
     font-family: 'Roboto', 'sans-serif';
     font-size: 22px;
     margin-top: 35px;
+    background-color:#32c4e9;
 }
 
 .btn_large.quote_btn:hover {
@@ -774,6 +773,7 @@ header .light-logo {
     padding: 10px 22px;
     margin: 10px;
     text-decoration: none;
+    text-align: center;
     text-transform: uppercase;
     font-family: 'open sans', 'sans-serif';
     font-size: 16px;
@@ -796,27 +796,6 @@ header .light-logo {
 
 
 
-.portfolio-btn #btn_3 {
-    background-color: rgba(255,255,255,0);
-    color: #32c4e9;
-    font-weight: 600;
-    padding: 10px 20px;
-    margin: 10px;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-family: 'open sans', 'sans-serif';
-    font-size: 16px;
-    border: 2px solid #32c4e9;
-    border-radius: 4px;
-    
-}
-
-.portfolio-btn #btn_3:hover {
-    
-    background-color:#fff;
-    color: #000;
-    border:2px solid #000;
-}
 
 
 /* Skills Section */
@@ -896,7 +875,7 @@ header .light-logo {
     -moz-transition: all 300ms linear;
     -o-transition: all 300ms linear;
     transition: all 300ms linear;
-    border: 1px solid #232929;
+    border: 1px solid #000;
 }
 
 .skills_logos .skilltypes:hover {
