--- a/css/style.css
+++ b/css/style.css
@@ -213,17 +213,28 @@ header .light-logo {
     padding: 15px 0;
 }
 
+.navbar{
+    margin-bottom:0;
+}
+
+
+.navbar-brand{
+    margin-left:25px;
+}
+
 .navbar.navbar-inverse {
     margin: 0;
 }
 
 .navbar.navbar-inverse .navbar-toggle {
-    background-color: #222;
+    background-color: #000;
+    margin-right:25px;
 }
 
 .navbar-inverse .navbar-collapse {
     background-color: #000;
     visibility: visible;
+    margin:0;
 }
 
 .navbar .navbar-header {
@@ -234,6 +245,7 @@ header .light-logo {
 #myCollapsingList {
     background-color: #000;
     visibility: visible;
+    
 }
 
 #myCollapsingList li a {
@@ -241,6 +253,11 @@ header .light-logo {
     background-color: #000;
     font-family: 'open sans', 'sans-serif';
     font-weight: 600;
+    border-color:#000;
+}
+
+.resp-menu {
+    padding:0;
 }
 
 
@@ -2014,10 +2031,11 @@ header .light-logo {
         }
 
         .jumbotron-content ul {
-    margin-top: 22px;
-    margin-bottom: 30px;
-    margin-right: 30px;
+            margin-top: 22px;
+            margin-bottom: 30px;
+            margin-right: 30px;
 }
+
 
         .jumbotron-content ul li a {
             width: 35px;
