--- a/css/style.css
+++ b/css/style.css
@@ -317,7 +317,10 @@ header .light-logo {
     border-radius: 100%;
     box-shadow: 0 0 20px rgba(255, 255, 255, 0) inset;
     color: #fff;
-    display: inline-block;
+    display:flex;   /* Flexbox to align icons in the center */
+    justify-content:center;
+    align-items: center;
+    text-decoration:none;
     font-size: 16px;
     width: 50px;
     height: 50px;
